--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
+    "axios": "^1.12.2",
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.2",
     "lucide-react": "^0.344.0",
